--- a/Plate1-YuzuTart/style.css
+++ b/Plate1-YuzuTart/style.css
@@ -69,3 +69,37 @@
     height: 28px;
     color: white;
 }
+
+.about {
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+.about .contentBx {
+    background: #162c3b;
+    padding: 100px;
+    width: 50%;
+}
+
+.heading {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.text {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.about .imgBx {
+    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1613457429/Portfolio1/image3-1_l85pnv.jpg');
+    width: 50%;
+    background-size: cover;
+    background-position: center;
+}
