--- a/Plate1-YuzuTart/style.css
+++ b/Plate1-YuzuTart/style.css
@@ -123,11 +123,10 @@
 }
 
 .about .imgBx {
-    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1616886809/Plate%20to%20Page/Michelin-Star_lb8pfo.jpg');
+    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1616886749/Plate%20to%20Page/michelinstar_uf1f1x.gif');
     width: 50%;
     background-size: cover;
     background-position: center;
-    background-position-y: 40%;
 }
 
 
@@ -150,19 +149,21 @@
     position: relative;
     background: #FDD200;
     width: 350px;
-    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    color: #452191;
+    padding: 10px;
 }
 
 .ingredients .container .ingredientBx:nth-child(2){
     background: #EEE6D3;
+    color: #A50B17;
 }
 
 .ingredients .container .ingredientBx:nth-child(3){
     background: #A50B17;
+    color: #EEE6D3;
 }
 
 .ingredients .container .ingredientBx img {
@@ -177,7 +178,53 @@
     letter-spacing: 1px;
 }
 
-.technology {
+.recipecontainer {
+    color: #EEE6D3;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+}
+
+.ingredientlist {
+    border: 2px solid #EEE6D3;
+    width: 500px;
+    padding: 10px;
+}
+
+.ingredientlist p {
+    padding: 5px;
+}
+
+.ingredientlist ul {
+    list-style: none;
+    padding: 10px;
+    font-size: 14px;
+    text-align: start;
+    margin-left: 125px;
+}
+
+.process {
+    border: 2px solid #EEE6D3;
+    width: 1000px;
+    padding: 10px;
+}
+
+.process ul {
+    list-style: none;
+    text-align: start;
+    font-size: 12px;
+}
+
+.process li {
+    padding: 5px;
+}
+
+.process p {
+    padding: 5px;
+}
+
+.history {
     background: #3f8ffc;
     padding: 100px;
     padding-top: 300px;
@@ -187,15 +234,15 @@
     align-items: center;
 }
 
-.technology .imgBx {
+.history .imgBx {
     max-width: 250px;
 }
 
-.technology .imgBx img {
+/* .history .imgBx img {
     max-width: 100%;
-}
+} */
 
-.client {
+/* .client {
     background: #162c3b;
     padding: 100px;
     text-align: center;
@@ -255,7 +302,7 @@
     font-weight: 500;
     color: #3f8ffc;
     padding-top: 10px;
-}
+} */
 
 .contact {
     padding: 100px;
@@ -264,14 +311,15 @@
 }
 
 .imgBx2 {
-    background: url('bg2.jpg');
+    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1616866762/Plate%20to%20Page/3E213431-698B-46C7-9E49-590301BE0B21_of3o3h.jpg');
     background-size: cover;
     background-position: center;
+    background-position-y: 45%;
     width: 50%;
 }
 
 .redbg {
-    background: red !important;
+    background: #452191 !important;
 }
 
 .form .inputBx {
@@ -287,12 +335,12 @@
     padding: 10px 0;
     font-size: 18px;
     font-weight: 300;
-    color: #fff;
-    border-bottom: 2px solid #fff;
+    color: #EEE6D3;
+    border-bottom: 2px solid #EEE6D3;
 }
 
 .form .inputBx input::placeholder {
-    color: #fff;
+    color: #EEE6D3;
 }
 
 .form .inputBx textarea {
@@ -304,18 +352,18 @@
     padding: 10px 0;
     font-size: 18px;
     font-weight: 300;
-    color: #fff;
+    color: #EEE6D3;
     min-height: 150px;
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #EEE6D3;
 }
 
 .form .inputBx textarea::placeholder {
-    color: #fff;
+    color: #EEE6D3;
 }
 
 .form .inputBx input[type="submit"] {
     width: 150px;
-    background: #fff;
+    background: #EEE6D3;
     color: #111;
     cursor: pointer;
     font-weight:400;
