--- a/Plate1-YuzuTart/style.css
+++ b/Plate1-YuzuTart/style.css
@@ -331,6 +331,14 @@
         font-size: 16px;
     }
 
+    #dish {
+        margin-left: 10px;
+    }
+
+    .ingredients .container .ingredientBx:nth-child(3){
+        margin: 0 auto;
+    }
+
     .about {
         flex-direction: column;
     }
